--- a/Dev2AssessorApp/Src/Screen1.fx.yaml
+++ b/Dev2AssessorApp/Src/Screen1.fx.yaml
@@ -563,7 +563,9 @@ Screen1 As screen:
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
                     TemplatePadding: =0
-                    TemplateSize: =280
+                    TemplateSize: |-
+                        =//280
+                        txtTimeEstimateValueAR_1.Height+txtMaterialValueAR_1.Height+lblActionReqValueAR_1.Height+lblItemValueAR_1.Height+lblCheckpointValueAR_1.Height+lblOwnerIdValueAR_1.Height+lblPriorityValueAR_1.Height+50
                     Width: =Parent.Width-20
                     Y: |-
                         =Label22_2.Y+ Label22_2.Height
@@ -823,7 +825,7 @@ Screen1 As screen:
                         Height: =1
                         Width: =Parent.Width
                         X: =1
-                        Y: |-
+                        Y: |
                             =//txtTimeEstimateValueAR_1.Height+txtTimeEstimateValueAR_1.Y+30
                             Gallery15_1.TemplateHeight-5
                         ZIndex: =19
