--- a/Dev2AssessorApp/Src/FindingScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/FindingScreen.fx.yaml
@@ -2696,9 +2696,15 @@ FindingScreen As screen:
             HoverFill: =RGBA(75, 125, 6, 1)
             OnSelect: |
                 =Set(
+                    C,
+                    false
+                    );
+                
+                Set(
                     P,
                     true
                 );
+                
                 Set(
                     PopupCloseAction,
                     false
@@ -2728,7 +2734,7 @@ FindingScreen As screen:
             HoverBorderColor: =RGBA(75, 125, 6, 1)
             HoverFill: =RGBA(75, 125, 6, 1)
             OnSelect: |
-                =Set(P,true);
+                =Set(P,true);Set(C,false);
                 Set(PopupCloseAction,false);
                 Navigate(FindingScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
