--- a/Dev2AssessorApp/Src/FindingScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/FindingScreen.fx.yaml
@@ -1641,7 +1641,13 @@ FindingScreen As screen:
                                 MaxLength: =256
                                 OnChange: |-
                                     =/*UpdateIf(GC_checkpointItem_ActionItem,checkpointItemActionItemsId=ThisItem.checkpointItemActionItemsId,{ActionItem_Name:GlryActionItemFS.Selected.TextInput8.Text})*/
-                                    If(Len(TextInput8.Text)=256,Notify("Action should be less than 256 characters",NotificationType.Warning))
+                                    If(
+                                        Len(TextInput8.Text) = 256,
+                                        Notify(
+                                            "Action should be less than 256 characters",
+                                            NotificationType.Warning
+                                        )
+                                    )
                                 OnSelect: =Select(Parent)
                                 RadiusBottomLeft: =1
                                 RadiusBottomRight: =1
