--- a/Dev2AssessorApp/Src/SectionScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/SectionScreen.fx.yaml
@@ -5,7 +5,7 @@ SectionScreen As screen:
         Reset(tmr_logout);
         Set(UserLastNavigated, Now());*/
         
-        //for safety check
+        //for safety check popup
         If(
             DateDiff(
                 UserLastNavigatedTime,
