--- a/Dev2AssessorApp/Src/Screen1.fx.yaml
+++ b/Dev2AssessorApp/Src/Screen1.fx.yaml
@@ -391,7 +391,7 @@ Screen1 As screen:
                     BorderColor: =RGBA(179, 179, 179, 1)
                     Default: |-
                         =//check summary is available for assignment if available then display summary
-                        //If(IsBlank(First(localBanktripReport).Summary)," ",First(localBanktripReport).Summary)
+                        If(IsBlank(First(localBanktripReport).Summary)," ",First(localBanktripReport).Summary)
                     DisplayMode: =If(comp=true,DisplayMode.View,Edit)
                     FillPortions: =1
                     HintText: ="Enter here"
@@ -418,7 +418,7 @@ Screen1 As screen:
                     BorderColor: =RGBA(179, 179, 179, 1)
                     Default: |-
                         =//check background is available for assignment if available then display background
-                        //If(IsBlank(First(localBanktripReport).Background)," ",First(localBanktripReport).Background)
+                        If(IsBlank(First(localBanktripReport).Background)," ",First(localBanktripReport).Background)
                     DisplayMode: =If(comp=true,DisplayMode.View,Edit)
                     FillPortions: =1
                     HintText: ="Enter here"
